--- a/index.html
+++ b/index.html
@@ -2,141 +2,331 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>3D Car Game</title>
+    <title>3D Car Game – Web</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
-            background: #0a0a0a;
-            font-family: Arial, sans-serif;
+            background: #020617;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+            color: #e5e7eb;
+        }
+        #menu, #hud {
+            position: fixed;
+            z-index: 10;
+        }
+        #menu {
+            inset: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: radial-gradient(circle at top, #0f172a, #020617);
+        }
+        .menu-panel {
+            background: rgba(15,23,42,0.95);
+            padding: 20px 24px;
+            border-radius: 12px;
+            box-shadow: 0 18px 40px rgba(0,0,0,0.7);
+            width: 320px;
+        }
+        .menu-panel h1 {
+            margin-top: 0;
+            margin-bottom: 8px;
+            font-size: 22px;
+        }
+        label {
+            display: block;
+            margin-top: 10px;
+            font-size: 13px;
+        }
+        input, select, button {
+            width: 100%;
+            margin-top: 4px;
+            padding: 6px 8px;
+            border-radius: 6px;
+            border: 1px solid #1e293b;
+            background: #020617;
+            color: #e5e7eb;
+            font-size: 14px;
+        }
+        button {
+            background: #2563eb;
+            border: none;
+            cursor: pointer;
+            margin-top: 16px;
+        }
+        button:hover {
+            background: #1d4ed8;
         }
         #hud {
-            position: fixed;
             top: 10px;
             left: 10px;
-            padding: 10px 14px;
-            background: rgba(0,0,0,0.5);
-            color: white;
-            border-radius: 6px;
-            z-index: 10;
+            background: rgba(15,23,42,0.8);
+            padding: 8px 12px;
+            border-radius: 8px;
+            font-size: 13px;
+            display: none;
+        }
+        #hud span {
+            display: inline-block;
+            min-width: 80px;
         }
     </style>
 </head>
 <body>
+<div id="menu">
+    <div class="menu-panel">
+        <h1>3D Car Racer</h1>
+        <p style="margin:0 0 10px 0;font-size:13px;color:#9ca3af;">
+            Choose your car and driver, then race!
+        </p>
 
-<div id="hud">WASD to drive • Speed: <span id="speed">0</span></div>
+        <label>
+            Player name
+            <input type="text" id="playerName" placeholder="Your name" />
+        </label>
+
+        <label>
+            Car
+            <select id="carSelect">
+                <option value="sport">Sport – fast, low grip</option>
+                <option value="muscle">Muscle – strong accel, heavy</option>
+                <option value="kart">Kart – low speed, high grip</option>
+            </select>
+        </label>
+
+        <label>
+            Driver
+            <select id="driverSelect">
+                <option value="aggressive">Aggressive – more oversteer</option>
+                <option value="balanced">Balanced – neutral handling</option>
+                <option value="smooth">Smooth – more grip, slower</option>
+            </select>
+        </label>
+
+        <button id="startBtn">Start Solo</button>
+        <button id="joinBtn" style="background:#16a34a;">Join Multiplayer (placeholder)</button>
+
+        <p style="margin-top:10px;font-size:11px;color:#6b7280;">
+            Controls: WASD or Arrow keys to drive. Multiplayer requires a WebSocket server (not included yet).
+        </p>
+    </div>
+</div>
+
+<div id="hud">
+    <span id="hudPlayer">Player: -</span>
+    <span id="hudCar">Car: -</span>
+    <span id="hudSpeed">Speed: 0</span>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
 
 <script>
-/* ------------------------------
-   BASIC THREE.JS SETUP
---------------------------------*/
-const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x101018);
+// ======= MENU LOGIC =======
+const menu = document.getElementById("menu");
+const hud = document.getElementById("hud");
+const playerNameInput = document.getElementById("playerName");
+const carSelect = document.getElementById("carSelect");
+const driverSelect = document.getElementById("driverSelect");
+const hudPlayer = document.getElementById("hudPlayer");
+const hudCar = document.getElementById("hudCar");
+const hudSpeed = document.getElementById("hudSpeed");
 
-const camera = new THREE.PerspectiveCamera(
-    60,
-    window.innerWidth / window.innerHeight,
-    0.1,
-    1000
-);
-camera.position.set(0, 6, 12);
+const gameConfig = {
+    playerName: "Player",
+    carType: "sport",
+    driverType: "balanced"
+};
 
-const renderer = new THREE.WebGLRenderer({ antialias: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
+document.getElementById("startBtn").onclick = () => {
+    gameConfig.playerName = playerNameInput.value || "Player";
+    gameConfig.carType = carSelect.value;
+    gameConfig.driverType = driverSelect.value;
+    startSoloGame();
+};
 
-/* ------------------------------
-   LIGHTING
---------------------------------*/
-const hemi = new THREE.HemisphereLight(0xffffff, 0x222233, 0.8);
-scene.add(hemi);
+document.getElementById("joinBtn").onclick = () => {
+    alert("Multiplayer: you’ll need a WebSocket server.\nWe’ll leave hooks in the code below.");
+};
 
-const dir = new THREE.DirectionalLight(0xffffff, 1);
-dir.position.set(10, 20, 10);
-scene.add(dir);
-
-/* ------------------------------
-   GROUND
---------------------------------*/
-const groundGeo = new THREE.PlaneGeometry(500, 500);
-const groundMat = new THREE.MeshStandardMaterial({ color: 0x202028 });
-const ground = new THREE.Mesh(groundGeo, groundMat);
-ground.rotation.x = -Math.PI / 2;
-scene.add(ground);
-
-/* ------------------------------
-   CAR MODEL
---------------------------------*/
-const car = new THREE.Group();
-
-// Body
-const bodyGeo = new THREE.BoxGeometry(2, 0.6, 4);
-const bodyMat = new THREE.MeshStandardMaterial({ color: 0xff3333 });
-const body = new THREE.Mesh(bodyGeo, bodyMat);
-body.position.y = 0.6;
-car.add(body);
-
-// Wheels
-const wheelGeo = new THREE.CylinderGeometry(0.5, 0.5, 0.4, 16);
-const wheelMat = new THREE.MeshStandardMaterial({ color: 0x111111 });
-
-function makeWheel(x, z) {
-    const w = new THREE.Mesh(wheelGeo, wheelMat);
-    w.rotation.z = Math.PI / 2;
-    w.position.set(x, 0.3, z);
-    return w;
-}
-
-car.add(makeWheel(1, 1.5));
-car.add(makeWheel(-1, 1.5));
-car.add(makeWheel(1, -1.5));
-car.add(makeWheel(-1, -1.5));
-
-scene.add(car);
-
-/* ------------------------------
-   SIMPLE CAR PHYSICS
---------------------------------*/
+// ======= THREE.JS SCENE SETUP =======
+let scene, camera, renderer, car;
 let speed = 0;
 let steering = 0;
-
-const maxSpeed = 40;
-const accel = 20;
-const friction = 8;
-const steerStrength = 1.5;
-
 const keys = {};
-window.addEventListener("keydown", e => keys[e.code] = true);
-window.addEventListener("keyup", e => keys[e.code] = false);
 
-/* ------------------------------
-   ANIMATION LOOP
---------------------------------*/
+init3D();
+animate();
+
+function init3D() {
+    scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x020617);
+
+    camera = new THREE.PerspectiveCamera(
+        60,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+    );
+    camera.position.set(0, 6, 12);
+
+    renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const hemi = new THREE.HemisphereLight(0xffffff, 0x111827, 0.8);
+    scene.add(hemi);
+
+    const dir = new THREE.DirectionalLight(0xffffff, 1);
+    dir.position.set(10, 20, -10);
+    scene.add(dir);
+
+    const groundGeo = new THREE.PlaneGeometry(500, 500);
+    const groundMat = new THREE.MeshStandardMaterial({ color: 0x0f172a });
+    const ground = new THREE.Mesh(groundGeo, groundMat);
+    ground.rotation.x = -Math.PI / 2;
+    scene.add(ground);
+
+    // basic track lines
+    const lineMat = new THREE.LineBasicMaterial({ color: 0x64748b });
+    const lineGeo = new THREE.BufferGeometry().setFromPoints([
+        new THREE.Vector3(-20, 0.01, -20),
+        new THREE.Vector3(20, 0.01, -20),
+        new THREE.Vector3(20, 0.01, 20),
+        new THREE.Vector3(-20, 0.01, 20),
+        new THREE.Vector3(-20, 0.01, -20)
+    ]);
+    scene.add(new THREE.Line(lineGeo, lineMat));
+
+    window.addEventListener("resize", onResize);
+    window.addEventListener("keydown", e => keys[e.code] = true);
+    window.addEventListener("keyup", e => keys[e.code] = false);
+}
+
+function createCarForConfig(config) {
+    if (car) scene.remove(car);
+    car = new THREE.Group();
+
+    let color = 0xff3333;
+    let maxSpeed = 40;
+    let accel = 20;
+    let gripMultiplier = 1;
+
+    if (config.carType === "sport") {
+        color = 0x22c55e;
+        maxSpeed = 55;
+        accel = 22;
+        gripMultiplier = 0.9;
+    } else if (config.carType === "muscle") {
+        color = 0xf97316;
+        maxSpeed = 45;
+        accel = 26;
+        gripMultiplier = 0.8;
+    } else if (config.carType === "kart") {
+        color = 0x3b82f6;
+        maxSpeed = 30;
+        accel = 16;
+        gripMultiplier = 1.2;
+    }
+
+    if (config.driverType === "aggressive") {
+        gripMultiplier *= 0.8;
+    } else if (config.driverType === "smooth") {
+        gripMultiplier *= 1.1;
+    }
+
+    car.userData.maxSpeed = maxSpeed;
+    car.userData.accel = accel;
+    car.userData.grip = gripMultiplier;
+
+    const bodyGeo = new THREE.BoxGeometry(2, 0.6, 4);
+    const bodyMat = new THREE.MeshStandardMaterial({ color });
+    const body = new THREE.Mesh(bodyGeo, bodyMat);
+    body.position.y = 0.6;
+    car.add(body);
+
+    const wheelGeo = new THREE.CylinderGeometry(0.5, 0.5, 0.4, 16);
+    const wheelMat = new THREE.MeshStandardMaterial({ color: 0x111827 });
+
+    function wheel(x, z) {
+        const w = new THREE.Mesh(wheelGeo, wheelMat);
+        w.rotation.z = Math.PI / 2;
+        w.position.set(x, 0.3, z);
+        return w;
+    }
+
+    car.add(wheel(1, 1.5));
+    car.add(wheel(-1, 1.5));
+    car.add(wheel(1, -1.5));
+    car.add(wheel(-1, -1.5));
+
+    car.position.set(0, 0, 0);
+    scene.add(car);
+
+    speed = 0;
+    steering = 0;
+}
+
+function startSoloGame() {
+    createCarForConfig(gameConfig);
+    hudPlayer.textContent = "Player: " + gameConfig.playerName;
+    hudCar.textContent = "Car: " + gameConfig.carType + " / " + gameConfig.driverType;
+    menu.style.display = "none";
+    hud.style.display = "block";
+}
+
+function onResize() {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+}
+
+// ======= GAME LOOP / BASIC “PHYSICS” =======
 function animate() {
     requestAnimationFrame(animate);
 
-    // Input
-    if (keys["KeyW"]) speed += accel * 0.02;
-    if (keys["KeyS"]) speed -= accel * 0.02;
+    if (car) updateCar();
+    renderer.render(scene, camera);
+}
+
+function updateCar() {
+    const accel = car.userData.accel || 20;
+    const maxSpeed = car.userData.maxSpeed || 40;
+    const grip = car.userData.grip || 1;
+
+    if (keys["KeyW"] || keys["ArrowUp"]) speed += accel * 0.02;
+    if (keys["KeyS"] || keys["ArrowDown"]) speed -= accel * 0.02;
 
     speed = Math.max(Math.min(speed, maxSpeed), -maxSpeed);
 
-    // Friction
-    if (!keys["KeyW"] && !keys["KeyS"]) {
-        if (speed > 0) speed -= friction * 0.02;
-        if (speed < 0) speed += friction * 0.02;
+    if (!keys["KeyW"] && !keys["KeyS"] && !keys["ArrowUp"] && !keys["ArrowDown"]) {
+        if (speed > 0) speed -= 8 * 0.02;
+        if (speed < 0) speed += 8 * 0.02;
         if (Math.abs(speed) < 0.1) speed = 0;
     }
 
-    // Steering
-    if (keys["KeyA"]) steering = steerStrength;
-    else if (keys["KeyD"]) steering = -steerStrength;
-    else steering = 0;
+    let steerInput = 0;
+    if (keys["KeyA"] || keys["ArrowLeft"]) steerInput += 1;
+    if (keys["KeyD"] || keys["ArrowRight"]) steerInput -= 1;
 
-    car.rotation.y += steering * (speed / maxSpeed) * 0.05;
+    const steerFactor = (speed / maxSpeed) * grip;
+    car.rotation.y += steerInput * steerFactor * 0.05;
 
-    // Move forward
     const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(car.quaternion);
-    car.position.addScaledVector(forward, speed
+    car.position.addScaledVector(forward, speed * 0.02);
+
+    const camOffset = new THREE.Vector3(0, 6, 12).applyQuaternion(car.quaternion);
+    const desiredCamPos = car.position.clone().add(camOffset);
+    camera.position.lerp(desiredCamPos, 0.1);
+    camera.lookAt(car.position.clone().add(new THREE.Vector3(0, 1, 0)));
+
+    hudSpeed.textContent = "Speed: " + Math.round(speed);
+}
+
+// ======= MULTIPLAYER HOOKS (placeholder) =======
+// Here you’d connect to a WebSocket server, send car.position & rotation,
+// and spawn other players’ cars having their transforms updated from server.
+</script>
+</body>
+</html>
+
